--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -154,6 +154,8 @@ for alphabets in which this is possible.
 \scm{\tratop{}}{Transpose with argument on top}{$\tratop{23}$}
 \scm{\variation}{Variation}{$\variation{a}{b}$}
 \scm{\partd}{Partial derivative}{$\partd{a}{b}$}
+\scm{\epartd}{Euler type partial derivative}{$\epartd{a}{b}$}
+\scm{\ederiv}{Euler type partial derivative}{$\ederiv{a}{b}$}
 \scm{\partdrb}{Partial derivative, round braces}{$\partdrb{a}{b}$}
 \scm{\partdsb}{Partial derivative, square brackets}{$\partdsb{a}{b}$}
 \scm{\cpartd}{Partial derivative with \texttt{cfrac}}{$\cpartd{a}{b}$}
@@ -161,6 +163,8 @@ for alphabets in which this is possible.
 \scm{\assem}{Assembly symbol}{$\assem$}
 \scm{\evat}{Evaluated at}{$a\evat_{b=0}$}
 \scm{\degree}{Degree symbol}{\degree{}C}
+\scm{\suml{}{}{}}{Summation made easier}{$\suml{i=1}{3}$}
+\scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\dyc$}
 \scm{\linedot}{Time integral with overline}{$\linedot{\UA}$}
 \scm{\DIV}{DIVergence}{$\DIV\VA$}
 \scm{\Div}{DIVergence}{$\Div\VA$}
@@ -213,10 +217,11 @@ for alphabets in which this is possible.
 \scm{\sothree}{Special orthogonal group 3}{$\sothree$}
 \scm{\slthree}{Special linear group 3}{$\slthree$}
 \scm{\AND}{and between equations}{$a \AND b$}
+\scm{\OR}{and between equations}{$a \OR b$}
 \scm{\WITH}{with between equations}{$a \WITH b$}
 \scm{\com}{Comma between equations}{$a\com b$}
 
-\subsection{Fractions and roots}
+\subsection{Fractions, roots, roman numerals}
 \scm{\half}{Half}{$\half$}
 \scm{\third}{Third}{$\third$}
 \scm{\fourth}{Fourth}{$\fourth$}
@@ -232,6 +237,17 @@ for alphabets in which this is possible.
 \scm{\sqonethree}{Sqonethree}{$\sqonethree$}
 \scm{\sqtwothree}{Sqtwothree}{$\sqtwothree$}
 \scm{\sqthreetwo}{Sqthreetwo}{$\sqthreetwo$}
+\scm{\Rone}{Roman 1}{$\Rone$}
+\scm{\Rtwo}{Roman 2}{$\Rtwo$}
+\scm{\Rthree}{Roman 3}{$\Rthree$}
+\scm{\Rfour}{Roman 4}{$\Rfour$}
+\scm{\Rvarfour}{Roman var 4}{$\Rvarfour$}
+\scm{\Rfive}{Roman 5}{$\Rfive$}
+\scm{\Rsix}{Roman 6}{$\Rsix$}
+\scm{\Rseven}{Roman 7}{$\Rseven$}
+\scm{\Reight}{Roman 8}{$\Reight$}
+\scm{\Rnine}{Roman 9}{$\Rnine$}
+\scm{\Rten}{Roman 10}{$\Rten$}
 
 \subsection{Vectors}
 \scm{\cvec{}}{Column vector}{$\cvec{1;2;3;4}$}
