--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -152,13 +152,18 @@ for alphabets in which this is possible.
 \scm{\tra}{Transpose}{$\tra$}
 \scm{\tra[]}{Transpose with preceding argument}{$\tra[-]$}
 \scm{\tratop{}}{Transpose with argument on top}{$\tratop{23}$}
-\scm{\variation}{Variation}{$\variation{a}{b}$}
+\scm{\vartn}{Variation}{$\vartn{a}{b}$}
 \scm{\partd}{Partial derivative}{$\partd{a}{b}$}
 \scm{\epartd}{Euler type partial derivative}{$\epartd{a}{b}$}
-\scm{\ederiv}{Euler type partial derivative}{$\ederiv{a}{b}$}
-\scm{\partdrb}{Partial derivative, round braces}{$\partdrb{a}{b}$}
-\scm{\partdsb}{Partial derivative, square brackets}{$\partdsb{a}{b}$}
+\scm{\ederiv}{Euler type derivative}{$\ederiv{a}{b}$}
 \scm{\cpartd}{Partial derivative with \texttt{cfrac}}{$\cpartd{a}{b}$}
+%
+\scm{\ddt}{Time derivative}{$\ddt x$}
+\scm{\ddelt}{Partial Time derivative}{$\ddelt x$}
+%
+\scm{\ddx}{Arbitrary derivative}{$\ddx a$}
+\scm{\ddelx}{Arbitrary partial derivative}{$\ddelx a$}
+%
 \scm{\deriv}{Derivative}{$\deriv{a}{b}$}
 \scm{\assem}{Assembly symbol}{$\assem$}
 \scm{\evat}{Evaluated at}{$a\evat_{b=0}$}
@@ -206,8 +211,6 @@ for alphabets in which this is possible.
 \scm{\Norm{}}{Norm}{$\Norm{\VA}$}
 \scm{\basis{}}{Vector bases}{$\basis{ijkl}$}
 \scm{\rbdot}{Operands}{$\div\rbdot$}
-\scm{\ddt}{Time derivative}{$\ddt x$}
-\scm{\ddelt}{Partial Time derivative}{$\ddelt x$}
 \scm{\so}{Special orthogonal group}{$\so$}
 % \scm{\rve}{}{$\rve$}
 % \scm{\rpg}{}{$\rpg$}
@@ -216,10 +219,11 @@ for alphabets in which this is possible.
 \scm{\othree}{Orthogonal group 3}{$\othree$}
 \scm{\sothree}{Special orthogonal group 3}{$\sothree$}
 \scm{\slthree}{Special linear group 3}{$\slthree$}
-\scm{\AND}{and between equations}{$a \AND b$}
-\scm{\OR}{and between equations}{$a \OR b$}
-\scm{\WITH}{with between equations}{$a \WITH b$}
-\scm{\com}{Comma between equations}{$a\com b$}
+\scm{\eqand}{and between equations}{$a \eqand b$}
+\scm{\eqor}{and between equations}{$a \eqor b$}
+\scm{\eqwith}{with between equations}{$a \eqwith b$}
+\scm{\eqcomma}{Comma between equations}{$a\eqcomma b$}
+\scm{\eqsemi}{Semicolon between equations}{$a\eqsemi b$}
 
 \subsection{Fractions, roots, roman numerals}
 \scm{\half}{Half}{$\half$}
