Added dif, var, crs

--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -152,6 +152,8 @@ for alphabets in which this is possible.
 \scm{\tra}{Transpose}{$\tra$}
 \scm{\tra[]}{Transpose with preceding argument}{$\tra[-]$}
 \scm{\tratop{}}{Transpose with argument on top}{$\tratop{23}$}
+\scm{\dif}{Differential operator d}{$\dif a$}
+\scm{\var}{Variational operator d}{$\var a$}
 \scm{\vartn}{Variation}{$\vartn{a}{b}$}
 \scm{\partd}{Partial derivative}{$\partd{a}{b}$}
 \scm{\epartd}{Euler type partial derivative}{$\epartd{a}{b}$}
@@ -169,6 +171,7 @@ for alphabets in which this is possible.
 \scm{\evat}{Evaluated at}{$a\evat_{b=0}$}
 \scm{\degree}{Degree symbol}{\degree{}C}
 \scm{\suml{}{}{}}{Summation made easier}{$\suml{i=1}{3}$}
+\scm{\crs}{Cross product (\texttt{times} shortcut)}{$\crs$}
 \scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\dyc$}
 \scm{\linedot}{Time integral with overline}{$\linedot{\UA}$}
 \scm{\DIV}{DIVergence}{$\DIV\VA$}
