--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -12,6 +12,7 @@
 \usepackage{relsize}
 \usepackage{amsmath}
 \usepackage{tabularx}
+% \usepackage{upgreek}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Different math symbols, latin and greek %
@@ -901,27 +902,30 @@
    \left[\kern-0.3\wd8\left[#1\right]\kern-0.3\wd8\right]%
 }
 
+\newcommand{\dif}{\mathsf{d}}
+\newcommand{\var}{\delta}
 \newcommand{\rbdot}{\rbr{\cdot}}
 % Mathematical operators
-\newcommand{\vartn}[2]{\frac{\delta #1}{\delta #2}}
+\newcommand{\vartn}[2]{\frac{\var #1}{\var #2}}
 \newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\epartd}[2]{\partial_{#2} #1}
 \newcommand{\cpartd}[2]{\cfrac{\partial #1}{\partial #2}}
 %
-\newcommand{\ddt}{\frac{\Ud}{\Ud t}}
+\newcommand{\ddt}{\frac{\dif}{\dif t}}
 \newcommand{\ddelt}{\frac{\partial}{\partial t}}
 %
-\newcommand{\ddx}{\frac{\Ud}{\Ud x}}
+\newcommand{\ddx}{\frac{\dif}{\dif x}}
 \newcommand{\ddelx}{\frac{\partial}{\partial x}}
 %
-\newcommand{\deriv}[2]{\frac{\mathrm{d} #1}{\mathrm{d} #2}}
-\newcommand{\ederiv}[2]{\UD_{#2} #1}
+\newcommand{\deriv}[2]{\frac{\dif #1}{\dif #2}}
+\newcommand{\ederiv}[2]{{\mathsf{D}}_{#2} #1}
 \newcommand{\assem}{\mathsf{A}}
 %\newcommand{\assem}{\mathlarger{\mathlarger{\mathlarger{\mathsf{A}}}}}
 \newcommand{\evat}{\bigg|}
 \newcommand{\degree}{\ensuremath{^{\circ}}\xspace}
 \newcommand{\suml}[2]{\sum\limits_{#1}^{#2}}
 \newcommand{\dyc}{\otimes}
+\newcommand{\crs}{\times}
 % Special fractions and roots
 % \newcommand{\half}{{\mthin\frac{1}{2}\mthin}}
 % \newcommand{\third}{{\mthin\frac{1}{3}\mthin}}
@@ -1000,13 +1004,13 @@
 \newcommand{\ndim}{\mathop{n_{\operator@font dim}}}
 \newcommand{\diag}{\mathop{\operator@font diag}}
 \newcommand{\veci}[1]{#1_1,\ldots,#1_n}
-\newcommand{\dV}{\mkern\medmuskip \Ud V}
-\newcommand{\dv}{\mkern\medmuskip \Ud v}
-\newcommand{\dA}{\mkern\medmuskip \Ud A}
-\newcommand{\da}{\mkern\medmuskip \Ud a}
-\newcommand{\dS}{\mkern\medmuskip \Ud S}
-\newcommand{\dx}{\mkern\medmuskip \Ud x}
-\newcommand{\dt}{\mkern\medmuskip \Ud t}
+\newcommand{\dV}{\mkern\medmuskip \dif V}
+\newcommand{\dv}{\mkern\medmuskip \dif v}
+\newcommand{\dA}{\mkern\medmuskip \dif A}
+\newcommand{\da}{\mkern\medmuskip \dif a}
+\newcommand{\dS}{\mkern\medmuskip \dif S}
+\newcommand{\dx}{\mkern\medmuskip \dif x}
+\newcommand{\dt}{\mkern\medmuskip \dif t}
 \newcommand{\dbrl}{\mathopen{[\mkern-2.5mu[}}
 \newcommand{\dbrr}{\mathclose{]\mkern-2.5mu]}}
 \newcommand{\Abs}[1]{\left|#1\right|}
