Added more doc, sans-serif symbols

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -12,6 +12,7 @@
 \usepackage{relsize}
 \usepackage{amsmath}
 \usepackage{tabularx}
+% \usepackage{unicode-math}
 % \usepackage{upgreek}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -574,6 +575,114 @@
 \newcommand{\IBy}{{\bbmbboldsansitalic y}}
 \newcommand{\IBz}{{\bbmbboldsansitalic z}}
 
+% Sans-serif
+\newcommand{\FA}{\mathsf{A}}
+\newcommand{\FB}{\mathsf{B}}
+\newcommand{\FC}{\mathsf{C}}
+\newcommand{\FD}{\mathsf{D}}
+\newcommand{\FE}{\mathsf{E}}
+\newcommand{\FF}{\mathsf{F}}
+\newcommand{\FG}{\mathsf{G}}
+\newcommand{\FH}{\mathsf{H}}
+\newcommand{\FI}{\mathsf{I}}
+\newcommand{\FJ}{\mathsf{J}}
+\newcommand{\FK}{\mathsf{K}}
+\newcommand{\FL}{\mathsf{L}}
+\newcommand{\FM}{\mathsf{M}}
+\newcommand{\FN}{\mathsf{N}}
+\newcommand{\FO}{\mathsf{O}}
+\newcommand{\FP}{\mathsf{P}}
+\newcommand{\FQ}{\mathsf{Q}}
+\newcommand{\FR}{\mathsf{R}}
+\newcommand{\FS}{\mathsf{S}}
+\newcommand{\FT}{\mathsf{T}}
+\newcommand{\FU}{\mathsf{U}}
+\newcommand{\FV}{\mathsf{V}}
+\newcommand{\FW}{\mathsf{W}}
+\newcommand{\FX}{\mathsf{X}}
+\newcommand{\FY}{\mathsf{Y}}
+\newcommand{\FZ}{\mathsf{Z}}
+\newcommand{\Fa}{\mathsf{a}}
+\newcommand{\Fb}{\mathsf{b}}
+\newcommand{\Fc}{\mathsf{c}}
+\newcommand{\Fd}{\mathsf{d}}
+\newcommand{\Fe}{\mathsf{e}}
+\newcommand{\Ff}{\mathsf{f}}
+\newcommand{\Fg}{\mathsf{g}}
+\newcommand{\Fh}{\mathsf{h}}
+\newcommand{\Fi}{\mathsf{i}}
+\newcommand{\Fj}{\mathsf{j}}
+\newcommand{\Fk}{\mathsf{k}}
+\newcommand{\Fl}{\mathsf{l}}
+\newcommand{\Fm}{\mathsf{m}}
+\newcommand{\Fn}{\mathsf{n}}
+\newcommand{\Fo}{\mathsf{o}}
+\newcommand{\Fp}{\mathsf{p}}
+\newcommand{\Fq}{\mathsf{q}}
+\newcommand{\Fr}{\mathsf{r}}
+\newcommand{\Fs}{\mathsf{s}}
+\newcommand{\Ft}{\mathsf{t}}
+\newcommand{\Fu}{\mathsf{u}}
+\newcommand{\Fv}{\mathsf{v}}
+\newcommand{\Fw}{\mathsf{w}}
+\newcommand{\Fx}{\mathsf{x}}
+\newcommand{\Fy}{\mathsf{y}}
+\newcommand{\Fz}{\mathsf{z}}
+
+% Bold Sans-serif
+\newcommand{\BFA}{\textbf{\textsf{A}}}
+\newcommand{\BFB}{\textbf{\textsf{B}}}
+\newcommand{\BFC}{\textbf{\textsf{C}}}
+\newcommand{\BFD}{\textbf{\textsf{D}}}
+\newcommand{\BFE}{\textbf{\textsf{E}}}
+\newcommand{\BFF}{\textbf{\textsf{F}}}
+\newcommand{\BFG}{\textbf{\textsf{G}}}
+\newcommand{\BFH}{\textbf{\textsf{H}}}
+\newcommand{\BFI}{\textbf{\textsf{I}}}
+\newcommand{\BFJ}{\textbf{\textsf{J}}}
+\newcommand{\BFK}{\textbf{\textsf{K}}}
+\newcommand{\BFL}{\textbf{\textsf{L}}}
+\newcommand{\BFM}{\textbf{\textsf{M}}}
+\newcommand{\BFN}{\textbf{\textsf{N}}}
+\newcommand{\BFO}{\textbf{\textsf{O}}}
+\newcommand{\BFP}{\textbf{\textsf{P}}}
+\newcommand{\BFQ}{\textbf{\textsf{Q}}}
+\newcommand{\BFR}{\textbf{\textsf{R}}}
+\newcommand{\BFS}{\textbf{\textsf{S}}}
+\newcommand{\BFT}{\textbf{\textsf{T}}}
+\newcommand{\BFU}{\textbf{\textsf{U}}}
+\newcommand{\BFV}{\textbf{\textsf{V}}}
+\newcommand{\BFW}{\textbf{\textsf{W}}}
+\newcommand{\BFX}{\textbf{\textsf{X}}}
+\newcommand{\BFY}{\textbf{\textsf{Y}}}
+\newcommand{\BFZ}{\textbf{\textsf{Z}}}
+\newcommand{\BFa}{\textbf{\textsf{a}}}
+\newcommand{\BFb}{\textbf{\textsf{b}}}
+\newcommand{\BFc}{\textbf{\textsf{c}}}
+\newcommand{\BFd}{\textbf{\textsf{d}}}
+\newcommand{\BFe}{\textbf{\textsf{e}}}
+\newcommand{\BFf}{\textbf{\textsf{f}}}
+\newcommand{\BFg}{\textbf{\textsf{g}}}
+\newcommand{\BFh}{\textbf{\textsf{h}}}
+\newcommand{\BFi}{\textbf{\textsf{i}}}
+\newcommand{\BFj}{\textbf{\textsf{j}}}
+\newcommand{\BFk}{\textbf{\textsf{k}}}
+\newcommand{\BFl}{\textbf{\textsf{l}}}
+\newcommand{\BFm}{\textbf{\textsf{m}}}
+\newcommand{\BFn}{\textbf{\textsf{n}}}
+\newcommand{\BFo}{\textbf{\textsf{o}}}
+\newcommand{\BFp}{\textbf{\textsf{p}}}
+\newcommand{\BFq}{\textbf{\textsf{q}}}
+\newcommand{\BFr}{\textbf{\textsf{r}}}
+\newcommand{\BFs}{\textbf{\textsf{s}}}
+\newcommand{\BFt}{\textbf{\textsf{t}}}
+\newcommand{\BFu}{\textbf{\textsf{u}}}
+\newcommand{\BFv}{\textbf{\textsf{v}}}
+\newcommand{\BFw}{\textbf{\textsf{w}}}
+\newcommand{\BFx}{\textbf{\textsf{x}}}
+\newcommand{\BFy}{\textbf{\textsf{y}}}
+\newcommand{\BFz}{\textbf{\textsf{z}}}
+
 % Raph Smith’s Formal Script
 \DeclareMathAlphabet{\rsfsfont}{U}{rsfs}{m}{n}
 \def\rsfsfontbold#1{\pmb{\rsfsfont{#1}}}
@@ -908,6 +1017,7 @@
 % Mathematical operators
 \newcommand{\vartn}[2]{\frac{\var #1}{\var #2}}
 \newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\partdd}[2]{\frac{\partial^2 #1}{\partial #2^2}}
 \newcommand{\epartd}[2]{\partial_{#2} #1}
 \newcommand{\cpartd}[2]{\cfrac{\partial #1}{\partial #2}}
 %
@@ -918,12 +1028,14 @@
 \newcommand{\ddelx}{\frac{\partial}{\partial x}}
 %
 \newcommand{\deriv}[2]{\frac{\dif #1}{\dif #2}}
+\newcommand{\derivd}[2]{\frac{\dif^2 #1}{\dif #2^2}}
 \newcommand{\ederiv}[2]{{\mathsf{D}}_{#2} #1}
 \newcommand{\assem}{\mathsf{A}}
 %\newcommand{\assem}{\mathlarger{\mathlarger{\mathlarger{\mathsf{A}}}}}
 \newcommand{\evat}{\bigg|}
 \newcommand{\degree}{\ensuremath{^{\circ}}\xspace}
 \newcommand{\suml}[2]{\sum\limits_{#1}^{#2}}
+\newcommand{\sumn}[2]{\sum\nolimits_{#1}^{#2}}
 \newcommand{\dyc}{\otimes}
 \newcommand{\crs}{\times}
 % Special fractions and roots
