Corrected errors, RS/BS to ral/Bral

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -686,60 +686,60 @@
 % Raph Smith’s Formal Script
 \DeclareMathAlphabet{\rsfsfont}{U}{rsfs}{m}{n}
 \def\rsfsfontbold#1{\pmb{\rsfsfont{#1}}}
-\newcommand{\RSA}{{\rsfsfont A}}
-\newcommand{\RSB}{{\rsfsfont B}}
-\newcommand{\RSC}{{\rsfsfont C}}
-\newcommand{\RSD}{{\rsfsfont D}}
-\newcommand{\RSE}{{\rsfsfont E}}
-\newcommand{\RSF}{{\rsfsfont F}}
-\newcommand{\RSG}{{\rsfsfont G}}
-\newcommand{\RSH}{{\rsfsfont H}}
-\newcommand{\RSI}{{\rsfsfont I}}
-\newcommand{\RSJ}{{\rsfsfont J}}
-\newcommand{\RSK}{{\rsfsfont K}}
-\newcommand{\RSL}{{\rsfsfont L}}
-\newcommand{\RSM}{{\rsfsfont M}}
-\newcommand{\RSN}{{\rsfsfont N}}
-\newcommand{\RSO}{{\rsfsfont O}}
-\newcommand{\RSP}{{\rsfsfont P}}
-\newcommand{\RSQ}{{\rsfsfont Q}}
-\newcommand{\RSR}{{\rsfsfont R}}
-\newcommand{\RSS}{{\rsfsfont S}}
-\newcommand{\RST}{{\rsfsfont T}}
-\newcommand{\RSU}{{\rsfsfont U}}
-\newcommand{\RSV}{{\rsfsfont V}}
-\newcommand{\RSW}{{\rsfsfont W}}
-\newcommand{\RSX}{{\rsfsfont X}}
-\newcommand{\RSY}{{\rsfsfont Y}}
-\newcommand{\RSZ}{{\rsfsfont Z}}
+\newcommand{\ralA}{{\rsfsfont A}}
+\newcommand{\ralB}{{\rsfsfont B}}
+\newcommand{\ralC}{{\rsfsfont C}}
+\newcommand{\ralD}{{\rsfsfont D}}
+\newcommand{\ralE}{{\rsfsfont E}}
+\newcommand{\ralF}{{\rsfsfont F}}
+\newcommand{\ralG}{{\rsfsfont G}}
+\newcommand{\ralH}{{\rsfsfont H}}
+\newcommand{\ralI}{{\rsfsfont I}}
+\newcommand{\ralJ}{{\rsfsfont J}}
+\newcommand{\ralK}{{\rsfsfont K}}
+\newcommand{\ralL}{{\rsfsfont L}}
+\newcommand{\ralM}{{\rsfsfont M}}
+\newcommand{\ralN}{{\rsfsfont N}}
+\newcommand{\ralO}{{\rsfsfont O}}
+\newcommand{\ralP}{{\rsfsfont P}}
+\newcommand{\ralQ}{{\rsfsfont Q}}
+\newcommand{\ralR}{{\rsfsfont R}}
+\newcommand{\ralS}{{\rsfsfont S}}
+\newcommand{\ralT}{{\rsfsfont T}}
+\newcommand{\ralU}{{\rsfsfont U}}
+\newcommand{\ralV}{{\rsfsfont V}}
+\newcommand{\ralW}{{\rsfsfont W}}
+\newcommand{\ralX}{{\rsfsfont X}}
+\newcommand{\ralY}{{\rsfsfont Y}}
+\newcommand{\ralZ}{{\rsfsfont Z}}
 
 % Raph Smith’s Formal Script bold
-\newcommand{\BSA}{{\rsfsfontbold A}}
-\newcommand{\BSB}{{\rsfsfontbold B}}
-\newcommand{\BSC}{{\rsfsfontbold C}}
-\newcommand{\BSD}{{\rsfsfontbold D}}
-\newcommand{\BSE}{{\rsfsfontbold E}}
-\newcommand{\BSF}{{\rsfsfontbold F}}
-\newcommand{\BSG}{{\rsfsfontbold G}}
-\newcommand{\BSH}{{\rsfsfontbold H}}
-\newcommand{\BSI}{{\rsfsfontbold I}}
-\newcommand{\BSJ}{{\rsfsfontbold J}}
-\newcommand{\BSK}{{\rsfsfontbold K}}
-\newcommand{\BSL}{{\rsfsfontbold L}}
-\newcommand{\BSM}{{\rsfsfontbold M}}
-\newcommand{\BSN}{{\rsfsfontbold N}}
-\newcommand{\BSO}{{\rsfsfontbold O}}
-\newcommand{\BSP}{{\rsfsfontbold P}}
-\newcommand{\BSQ}{{\rsfsfontbold Q}}
-\newcommand{\BSR}{{\rsfsfontbold R}}
-\newcommand{\BSS}{{\rsfsfontbold S}}
-\newcommand{\BST}{{\rsfsfontbold T}}
-\newcommand{\BSU}{{\rsfsfontbold U}}
-\newcommand{\BSV}{{\rsfsfontbold V}}
-\newcommand{\BSW}{{\rsfsfontbold W}}
-\newcommand{\BSX}{{\rsfsfontbold X}}
-\newcommand{\BSY}{{\rsfsfontbold Y}}
-\newcommand{\BSZ}{{\rsfsfontbold Z}}
+\newcommand{\BralA}{{\rsfsfontbold A}}
+\newcommand{\BralB}{{\rsfsfontbold B}}
+\newcommand{\BralC}{{\rsfsfontbold C}}
+\newcommand{\BralD}{{\rsfsfontbold D}}
+\newcommand{\BralE}{{\rsfsfontbold E}}
+\newcommand{\BralF}{{\rsfsfontbold F}}
+\newcommand{\BralG}{{\rsfsfontbold G}}
+\newcommand{\BralH}{{\rsfsfontbold H}}
+\newcommand{\BralI}{{\rsfsfontbold I}}
+\newcommand{\BralJ}{{\rsfsfontbold J}}
+\newcommand{\BralK}{{\rsfsfontbold K}}
+\newcommand{\BralL}{{\rsfsfontbold L}}
+\newcommand{\BralM}{{\rsfsfontbold M}}
+\newcommand{\BralN}{{\rsfsfontbold N}}
+\newcommand{\BralO}{{\rsfsfontbold O}}
+\newcommand{\BralP}{{\rsfsfontbold P}}
+\newcommand{\BralQ}{{\rsfsfontbold Q}}
+\newcommand{\BralR}{{\rsfsfontbold R}}
+\newcommand{\BralS}{{\rsfsfontbold S}}
+\newcommand{\BralT}{{\rsfsfontbold T}}
+\newcommand{\BralU}{{\rsfsfontbold U}}
+\newcommand{\BralV}{{\rsfsfontbold V}}
+\newcommand{\BralW}{{\rsfsfontbold W}}
+\newcommand{\BralX}{{\rsfsfontbold X}}
+\newcommand{\BralY}{{\rsfsfontbold Y}}
+\newcommand{\BralZ}{{\rsfsfontbold Z}}
 
 % Calligraphic
 \newcommand{\CA}{{\mathcal A}}
@@ -770,32 +770,32 @@
 \newcommand{\CZ}{{\mathcal Z}}
 
 % Calligraphic bold
-\newcommand{\CBA}{{\boldsymbol{\mathcal A}}}
-\newcommand{\CBB}{{\boldsymbol{\mathcal B}}}
-\newcommand{\CBC}{{\boldsymbol{\mathcal C}}}
-\newcommand{\CBD}{{\boldsymbol{\mathcal D}}}
-\newcommand{\CBE}{{\boldsymbol{\mathcal E}}}
-\newcommand{\CBF}{{\boldsymbol{\mathcal F}}}
-\newcommand{\CBG}{{\boldsymbol{\mathcal G}}}
-\newcommand{\CBH}{{\boldsymbol{\mathcal H}}}
-\newcommand{\CBI}{{\boldsymbol{\mathcal I}}}
-\newcommand{\CBJ}{{\boldsymbol{\mathcal J}}}
-\newcommand{\CBK}{{\boldsymbol{\mathcal K}}}
-\newcommand{\CBL}{{\boldsymbol{\mathcal L}}}
-\newcommand{\CBM}{{\boldsymbol{\mathcal M}}}
-\newcommand{\CBN}{{\boldsymbol{\mathcal N}}}
-\newcommand{\CBO}{{\boldsymbol{\mathcal O}}}
-\newcommand{\CBP}{{\boldsymbol{\mathcal P}}}
-\newcommand{\CBQ}{{\boldsymbol{\mathcal Q}}}
-\newcommand{\CBR}{{\boldsymbol{\mathcal R}}}
-\newcommand{\CBS}{{\boldsymbol{\mathcal S}}}
-\newcommand{\CBT}{{\boldsymbol{\mathcal T}}}
-\newcommand{\CBU}{{\boldsymbol{\mathcal U}}}
-\newcommand{\CBV}{{\boldsymbol{\mathcal V}}}
-\newcommand{\CBW}{{\boldsymbol{\mathcal W}}}
-\newcommand{\CBX}{{\boldsymbol{\mathcal X}}}
-\newcommand{\CBY}{{\boldsymbol{\mathcal Y}}}
-\newcommand{\CBZ}{{\boldsymbol{\mathcal Z}}}
+\newcommand{\BCA}{{\boldsymbol{\mathcal A}}}
+\newcommand{\BCB}{{\boldsymbol{\mathcal B}}}
+\newcommand{\BCC}{{\boldsymbol{\mathcal C}}}
+\newcommand{\BCD}{{\boldsymbol{\mathcal D}}}
+\newcommand{\BCE}{{\boldsymbol{\mathcal E}}}
+\newcommand{\BCF}{{\boldsymbol{\mathcal F}}}
+\newcommand{\BCG}{{\boldsymbol{\mathcal G}}}
+\newcommand{\BCH}{{\boldsymbol{\mathcal H}}}
+\newcommand{\BCI}{{\boldsymbol{\mathcal I}}}
+\newcommand{\BCJ}{{\boldsymbol{\mathcal J}}}
+\newcommand{\BCK}{{\boldsymbol{\mathcal K}}}
+\newcommand{\BCL}{{\boldsymbol{\mathcal L}}}
+\newcommand{\BCM}{{\boldsymbol{\mathcal M}}}
+\newcommand{\BCN}{{\boldsymbol{\mathcal N}}}
+\newcommand{\BCO}{{\boldsymbol{\mathcal O}}}
+\newcommand{\BCP}{{\boldsymbol{\mathcal P}}}
+\newcommand{\BCQ}{{\boldsymbol{\mathcal Q}}}
+\newcommand{\BCR}{{\boldsymbol{\mathcal R}}}
+\newcommand{\BCS}{{\boldsymbol{\mathcal S}}}
+\newcommand{\BCT}{{\boldsymbol{\mathcal T}}}
+\newcommand{\BCU}{{\boldsymbol{\mathcal U}}}
+\newcommand{\BCV}{{\boldsymbol{\mathcal V}}}
+\newcommand{\BCW}{{\boldsymbol{\mathcal W}}}
+\newcommand{\BCX}{{\boldsymbol{\mathcal X}}}
+\newcommand{\BCY}{{\boldsymbol{\mathcal Y}}}
+\newcommand{\BCZ}{{\boldsymbol{\mathcal Z}}}
 
 % Fraktur
 \DeclareMathAlphabet{\frakfont}{U}{euf}{m}{n}
