--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -193,18 +193,18 @@ for alphabets in which this is possible.
   Upright letters & none & \verb+\U+ & $\UA\UB\UC\Ud\Ue\Uf$\\
   Italic bold letters & none & \verb+\B+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
   Upright bold letters & none & \verb+\V+ & $\VA\VB\VC\Vd\Ve\Vf\Vone\Vtwo\Vthree$ \\
+  Sans serif & none & \verb+\F+ & $\FA\FB\FC\Fd\Fe\Ff$\\
+  Bold sans serif & none & \verb+\BF+ & $\BFA\BFB\BFC\BFd\BFe\BFf$\\
   Calligraphic letters (uppercase only) & none & \verb+\C+ & $\CA\CB\CC$ \\
-  Calligraphic bold letters (uppercase only) & none & \verb+\CB+ & $\CBA\CBB\CBC$ \\
+  Calligraphic bold letters (uppercase only) & none & \verb+\BC+ & $\BCA\BCB\BCC$ \\
   AMS blackboard bold (uppercase only) & \texttt{amsfonts} & \verb+\I+ & $\IA\IB\IC$ \\
   \texttt{bbold} blackboard bold & \texttt{bbold},\texttt{mathbbol} & \verb+\II+ & $\IIA\IIB\IIC\IId\IIe\IIf\IIone\IItwo\IIthree$ \\
   \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & $\BBA\BBB\BBC\BBd\BBe\BBf$ \\
   \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & $\bBA\bBB\bBC\bBd\bBe\bBf$\\
   \texttt{bbm} blackboard bold sans italic & \texttt{bbm} & \verb+\IB+ & $\IBA\IBB\IBC\IBd\IBe\IBf$\\
   \texttt{bbm} blackboard bold serif italic & \texttt{bbm} & \verb+\iB+ & $\iBA\iBB\iBC\iBd\iBe\iBf$\\
-  Sans serif & none & \verb+\F+ & $\FA\FB\FC\Fd\Fe\Ff$\\
-  Bold sans serif & none & \verb+\F+ & $\BFA\BFB\BFC\BFd\BFe\BFf$\\
-  Raph Smith’s Formal Script (uppercase only) & \texttt{rsfs} & \verb+\RS+ & $\RSA\RSB\RSC$\\
-  Raph Smith’s Formal Script bold (uppercase only) & \texttt{rsfs} & \verb+\BS+ & $\BSA\BSB\BSC$\\
+  Ralph Smith’s Formal Script (uppercase only) & \texttt{rsfs} & \verb+\ral+ & $\ralA\ralB\ralC$\\
+  Ralph Smith’s Formal Script bold (uppercase only) & \texttt{rsfs} & \verb+\Bral+ & $\BralA\BralB\BralC$\\
   \texttt{euscript} cursive (uppercase only) & \texttt{euscript} & \verb+\eul+ & $\eulA\eulB\eulC$\\
   \texttt{euscript} cursive bold (uppercase only) & \texttt{euscript} & \verb+\Beul+ & $\BeulA\BeulB\BeulC$\\
   Fraktur & \texttt{yfonts} & \verb+\frak+ & $\frakA\frakB\frakC\fraka\frakb\frakc$\\
