--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1013,7 +1013,7 @@
 
 \newcommand{\dif}{\mathsf{d}}
 \newcommand{\var}{\delta}
-\newcommand{\rbdot}{\rbr{\cdot}}
+\newcommand{\rbdot}{\rbr{\hspace{0.12em}\cdot\hspace{0.12em}}}
 % Mathematical operators
 \newcommand{\vartn}[2]{\frac{\var #1}{\var #2}}
 \newcommand{\partd}[2]{\frac{\partial #1}{\partial #2}}
@@ -1140,6 +1140,7 @@
 \newcommand{\eqwith}{\ensuremath{\quad\textup{with}\quad}}
 \newcommand{\eqcomma}{\ensuremath{\quad\textup{,}\quad}}
 \newcommand{\eqsemi}{\ensuremath{\quad\textup{;}\quad}}
+\newcommand{\quadd}[1]{\ensuremath{\quad#1\quad}}
 \makeatother
 
 % transpose macros
