--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -328,6 +328,7 @@ for alphabets in which this is possible.
 \scm{\eqwith}{with between equations}{$a \eqwith b$}
 \scm{\eqcomma}{Comma between equations}{$a\eqcomma b$}
 \scm{\eqsemi}{Semicolon between equations}{$a\eqsemi b$}
+\scm{\quadd}{Wraps the parameters with quads}{$a\quadd{\rightarrow} b$}
 
 \subsection{Fractions, roots, roman numerals}
 \scm{\half}{Half}{$\half$}
