--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -247,16 +247,20 @@ for alphabets in which this is possible.
 
 % \scm{Macro}{Explanation}{Example usage}
 %
+\scm{\transposesymbol}{Transpose symbol}{$\transposesymbol$}
 \scm{\tra}{Transpose}{$\tra$}
-\scm{\tra[]}{Transpose with preceding argument}{$\tra[-]$}
-\scm{\tratop{}}{Transpose with argument on top}{$\tratop{23}$}
+% \scm{\tra[]}{Transpose with preceding argument}{$\tra[-]$}
+\scm{\trab}{Transpose with preceding argument}{$\trab{-}$}
+\scm{\traf}{Transpose with following argument}{$\traf{-1}$}
+\scm{\trabf}{Transpose with preceding and following argument}{$\trabf{-}{-1}$}
+\scm{\trat}{Transpose with argument on top}{$\trat{23}$}
 \scm{\dif}{Differential operator d}{$\dif a$}
+\scm{\del}{Partial derivative operator}{$\del a$}
 \scm{\var}{Variational operator d}{$\var a$}
 \scm{\vartn}{Variation}{$\vartn{a}{b}$}
 \scm{\partd}{Partial derivative}{$\partd{a}{b}$}
 \scm{\partdd}{Double partial derivative}{$\partdd{a}{b}$}
 \scm{\epartd}{Euler type partial derivative}{$\epartd{a}{b}$}
-\scm{\cpartd}{Partial derivative with \texttt{cfrac}}{$\cpartd{a}{b}$}
 \scm{\deriv}{Derivative}{$\deriv{a}{b}$}
 \scm{\derivd}{Double derivative}{$\derivd{a}{b}$}
 \scm{\ederiv}{Euler type derivative}{$\ederiv{a}{b}$}
