--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -254,6 +254,7 @@ for alphabets in which this is possible.
 \scm{\traf}{Transpose with following argument}{$\traf{-1}$}
 \scm{\trabf}{Transpose with preceding and following argument}{$\trabf{-}{-1}$}
 \scm{\trat}{Transpose with argument on top}{$\trat{23}$}
+\scm{\inv}{Inverse}{$\VA\inv$}
 \scm{\dif}{Differential operator d}{$\dif a$}
 \scm{\del}{Partial derivative operator}{$\del a$}
 \scm{\var}{Variational operator d}{$\var a$}
