--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -277,12 +277,13 @@ for alphabets in which this is possible.
 \scm{\degree}{Degree symbol}{\degree{}C}
 \scm{\suml}{Summation made easier, with limits}{$\suml{i=1}{3}$}
 \scm{\sumn}{Summation made easier, with nolimits}{$\sumn{i=1}{3}$}
-\scm{\crs}{Cross product (\texttt{times} shortcut)}{$\crs$}
-\scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\dyc$}
+\scm{\crs}{Cross product (\texttt{times} shortcut)}{$\VA\crs\VB$}
+\scm{\dcrd}{Double cross product }{$\VA\dcrs\VB$}
+\scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\VA\dyc\VB$}
 \scm{\linedot}{Time integral with overline}{$\linedot{\UA}$}
 \scm{\DIV}{DIVergence}{$\DIV\VA$}
-\scm{\Div}{DIVergence}{$\Div\VA$}
-\scm{\div}{Divergence}{$\div\VA$}
+\scm{\Div}{Divergence}{$\Div\VA$}
+\scm{\div}{divergence}{$\div\VA$}
 \scm{\curl}{Curl}{$\curl\VA$}
 \scm{\rot}{Rotation}{$\rot\VA$}
 \scm{\proj}{Projection}{$\proj\VA$}
