--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1175,6 +1175,8 @@
 \def\trat#1{^{\stackrel{#1}{\transposesymbol}}} % \tratop[]
 
 \def\inv{\ensuremath{ ^{-1}}}
+\def\invtra{\trab{-}}
+\def\trainv{\traf{-1}}
 
 % Following macros are borrowed from the package schule2e. Very useful
 % for typesetting row and column vectors easily.
@@ -1272,6 +1274,7 @@
 % \edef\temp{\unexpanded\expandafter{\temp{}}}
 % \temp{}
 
+% double cross product
 \usepackage{stackengine}
 \def\stacktype{L}
 \stackMath
