--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -248,13 +248,15 @@ for alphabets in which this is possible.
 % \scm{Macro}{Explanation}{Example usage}
 %
 \scm{\transposesymbol}{Transpose symbol}{$\transposesymbol$}
-\scm{\tra}{Transpose}{$\tra$}
+\scm{\tra}{Transpose}{$\VA\tra$}
 % \scm{\tra[]}{Transpose with preceding argument}{$\tra[-]$}
-\scm{\trab}{Transpose with preceding argument}{$\trab{-}$}
-\scm{\traf}{Transpose with following argument}{$\traf{-1}$}
-\scm{\trabf}{Transpose with preceding and following argument}{$\trabf{-}{-1}$}
-\scm{\trat}{Transpose with argument on top}{$\trat{23}$}
+\scm{\trab}{Transpose with preceding argument}{$\VA\trab{-}$}
+\scm{\traf}{Transpose with following argument}{$\VA\traf{-1}$}
+\scm{\trabf}{Transpose with preceding and following argument}{$\VA\trabf{-}{-1}$}
+\scm{\trat}{Transpose with argument on top}{$\VA\trat{23}$}
 \scm{\inv}{Inverse}{$\VA\inv$}
+\scm{\invtra}{Invert, transpose}{$\VA\invtra$}
+\scm{\trainv}{Transpose, invert}{$\VA\trainv$}
 \scm{\dif}{Differential operator d}{$\dif a$}
 \scm{\del}{Partial derivative operator}{$\del a$}
 \scm{\var}{Variational operator d}{$\var a$}
@@ -278,7 +280,7 @@ for alphabets in which this is possible.
 \scm{\suml}{Summation made easier, with limits}{$\suml{i=1}{3}$}
 \scm{\sumn}{Summation made easier, with nolimits}{$\sumn{i=1}{3}$}
 \scm{\crs}{Cross product (\texttt{times} shortcut)}{$\VA\crs\VB$}
-\scm{\dcrd}{Double cross product }{$\VA\dcrs\VB$}
+\scm{\dcrs}{Double cross product }{$\VA\dcrs\VB$}
 \scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\VA\dyc\VB$}
 \scm{\linedot}{Time integral with overline}{$\linedot{\UA}$}
 \scm{\DIV}{DIVergence}{$\DIV\VA$}
