Added dot product

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1047,6 +1047,7 @@
 \newcommand{\sumn}[2]{\sum\nolimits_{#1}^{#2}}
 \newcommand{\dyc}{\otimes}
 \newcommand{\crs}{\times}
+\newcommand{\dtp}{\cdot}
 % Special fractions and roots
 % \newcommand{\half}{{\mthin\frac{1}{2}\mthin}}
 % \newcommand{\third}{{\mthin\frac{1}{3}\mthin}}
