--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -279,6 +279,7 @@ for alphabets in which this is possible.
 \scm{\degree}{Degree symbol}{\degree{}C}
 \scm{\suml}{Summation made easier, with limits}{$\suml{i=1}{3}$}
 \scm{\sumn}{Summation made easier, with nolimits}{$\sumn{i=1}{3}$}
+\scm{\dtp}{Dot product (\texttt{cdot} shortcut)}{$\VA\dtp\VB$}
 \scm{\crs}{Cross product (\texttt{times} shortcut)}{$\VA\crs\VB$}
 \scm{\dcrs}{Double cross product }{$\VA\dcrs\VB$}
 \scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\VA\dyc\VB$}
