--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -62,6 +62,25 @@
 \def\operator@font{\mathgroup\symsfoperators}
 \makeatother
 
+\makeatletter
+\newcommand\RedeclareMathOperator{%
+  \@ifstar{\def\rmo@s{m}\rmo@redeclare}{\def\rmo@s{o}\rmo@redeclare}%
+}
+% this is taken from \renew@command
+\newcommand\rmo@redeclare[2]{%
+  \begingroup \escapechar\m@ne\xdef\@gtempa{{\string#1}}\endgroup
+  \expandafter\@ifundefined\@gtempa
+     {\@latex@error{\noexpand#1undefined}\@ehc}%
+     \relax
+  \expandafter\rmo@declmathop\rmo@s{#1}{#2}}
+% This is just \@declmathop without \@ifdefinable
+\newcommand\rmo@declmathop[3]{%
+  \DeclareRobustCommand{#2}{\qopname\newmcodes@#1{#3}}%
+}
+\@onlypreamble\RedeclareMathOperator
+\makeatother
+
+
 % The following set of definitions are to help the typesetting of
 % formatted single letters, which are generally used for denoting
 % vectors, tensors etc.
@@ -1095,36 +1114,44 @@
 \newcommand{\Rnine}{\UI\hspace{-0.15em}\UX}
 \newcommand{\Rten}{\UX}
 
+
 \makeatletter
 \newcommand{\linedot}[1]{\dot{\overline{#1}}}
-\newcommand{\DIV}{\mathop{\operator@font DIV}}
-\newcommand{\Div}{\mathop{\operator@font Div}}
-\renewcommand{\div}{\mathop{\operator@font div}}
-\newcommand{\curl}{{\mathop{\operator@font curl}}}
-\newcommand{\rot}{{\mathop{\operator@font rot}}}
-\newcommand{\proj}{{\mathop{\operator@font proj}}}
-\newcommand{\sign}{{\mathop{\operator@font sign}}}
-\newcommand{\unit}{{\mathop{\operator@font unit}}}
-\renewcommand{\arg}{\mathop{\operator@font arg}}
-\newcommand{\Arg}{\mathop{\operator@font Arg}}
-\newcommand{\sym}{\mathop{\operator@font sym}}
-\newcommand{\TR}{\mathop{\operator@font TR}}
-\newcommand{\tr}{\mathop{\operator@font tr}}
-\newcommand{\trial}{\mathop{\operator@font trial}}
-\newcommand{\DEV}{\mathop{\operator@font DEV}}
-\newcommand{\dev}{\mathop{\operator@font dev}}
-\newcommand{\GRAD}{\mathop{\operator@font GRAD}}
-\newcommand{\Grad}{\mathop{\operator@font Grad}}
-\newcommand{\grad}{\mathop{\operator@font grad}}
-\newcommand{\Lin}{\mathop{\operator@font Lin}}
-\newcommand{\lin}{\mathop{\operator@font lin}}
-\newcommand{\skw}{\mathop{\operator@font skw}}
-\newcommand{\loc}{\mathop{\operator@font int}}
-\newcommand{\cof}{\mathop{\operator@font cof}}
-\newcommand{\reac}{\mathop{\operator@font reac}}
-\newcommand{\pind}{\mathop{\operator@font pind}}
-\newcommand{\ndim}{\mathop{n_{\operator@font dim}}}
-\newcommand{\diag}{\mathop{\operator@font diag}}
+
+
+% \renewcommand{\div}{\mathop{\operator@font div}}
+% \renewcommand{\arg}{\mathop{\operator@font arg}}
+% \newcommand{\ndim}{\mathop{n_{\operator@font dim}}}
+
+\DeclareMathOperator{\ndim}{\textit{n}_{\,dim}}
+\RedeclareMathOperator{\arg}{arg}
+\RedeclareMathOperator{\div}{div}
+\DeclareMathOperator{\DIV}{DIV}
+\DeclareMathOperator{\Div}{Div}
+\DeclareMathOperator{\curl}{curl}
+\DeclareMathOperator{\rot}{rot}
+\DeclareMathOperator{\proj}{proj}
+\DeclareMathOperator{\sign}{sign}
+\DeclareMathOperator{\unit}{unit}
+\DeclareMathOperator{\Arg}{Arg}
+\DeclareMathOperator{\sym}{sym}
+\DeclareMathOperator{\TR}{TR}
+\DeclareMathOperator{\tr}{tr}
+\DeclareMathOperator{\trial}{trial}
+\DeclareMathOperator{\DEV}{DEV}
+\DeclareMathOperator{\dev}{dev}
+\DeclareMathOperator{\GRAD}{GRAD}
+\DeclareMathOperator{\Grad}{Grad}
+\DeclareMathOperator{\grad}{grad}
+\DeclareMathOperator{\Lin}{Lin}
+\DeclareMathOperator{\lin}{lin}
+\DeclareMathOperator{\skw}{skw}
+\DeclareMathOperator{\loc}{int}
+\DeclareMathOperator{\cof}{cof}
+\DeclareMathOperator{\reac}{reac}
+\DeclareMathOperator{\pind}{pind}
+\DeclareMathOperator{\diag}{diag}
+
 \newcommand{\veci}[1]{#1_1,\ldots,#1_n}
 \newcommand{\dV}{\mkern\medmuskip \dif V}
 \newcommand{\dv}{\mkern\medmuskip \dif v}
